--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -142,5 +142,5 @@
     <color name="black_text">#000000</color>
     <color name="attachment_title">#333333</color>
     <color name="attachment_subtitle">#aaaaaa</color>
-    <color name="quoted_text_bg">#babebe</color>)
+    <color name="quoted_text_bg">#babebe</color>
 </resources>
